Fix horizontal scroll on mobile (#38)

--- a/theme/less/layout/grid.less
+++ b/theme/less/layout/grid.less
@@ -204,6 +204,14 @@ in which case you'll have one column on each side and the main content will span
     overflow: visible !important;
 }
 
+.block {
+    display: block;
+}
+
+.relative {
+    position: relative;
+}
+
 .hagrid {
     max-width: (12 * @breakpoint-xl)/10;
     margin: auto;
